[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queen-mq"
version = "0.15.0"
description = "High-performance message queue client + fluent streaming SDK for Python, backed by PostgreSQL"
readme = "README.md"
authors = [
    {name = "Smartness", email = "info@smartness.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = [
    "message-queue", "queue", "broker", "message-queue-system", "fifo",
    "streaming", "stream-processing", "rate-limiter",
    "tumbling-window", "sliding-window", "session-window", "event-time",
    "watermark", "exactly-once", "postgres",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "asyncpg>=0.29.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/queen-mq/queen"
Documentation = "https://github.com/queen-mq/queen"
Repository = "https://github.com/queen-mq/queen"
Issues = "https://github.com/queen-mq/queen/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["queen*"]

[tool.setuptools.package-data]
queen = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

